--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
 termion = "1.5.5"
 chrono = "0.4.11"
+structopt = "0.3.14"
 
 [profile.release]
 lto = true
